--- a/package.json
+++ b/package.json
@@ -27,12 +27,20 @@
     "@types/node": "^18.15.9",
     "@typescript-eslint/eslint-plugin": "5.57.1",
     "@typescript-eslint/parser": "5.57.1",
+    "autoprefixer": "^10.4.13",
     "eslint": "8.37.0",
     "eslint-plugin-qwik": "0.101.0",
+    "postcss": "^8.4.16",
+    "postcss-preset-env": "^8.0.1",
     "prettier": "2.8.7",
     "typescript": "5.0.3",
     "undici": "5.21.0",
     "vite": "4.2.1",
     "vite-tsconfig-paths": "3.5.0"
+  },
+  "dependencies": {
+    "@fontsource/caveat": "^4.5.10",
+    "@qwikest/icons": "^0.0.5",
+    "motion": "^10.15.5"
   }
 }
