--- a/package.json
+++ b/package.json
@@ -43,9 +43,7 @@
   },
   "dependencies": {
     "@fontsource/caveat": "^4.5.10",
-    "@prisma/client": "^4.12.0",
     "@qwikest/icons": "^0.0.5",
-    "motion": "^10.15.5",
-    "prisma": "^4.12.0"
+    "motion": "^10.15.5"
   }
 }
